<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:baselineAligned="false"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnSubjectTwo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/subject_two"
            android:layout_marginBottom="10dp">
        </Button>

        <Button
            android:id="@+id/btnSubjectTwoVideo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@id/btnSubjectTwo"
            android:text="@string/subject_two_video"
            android:layout_marginBottom="10dp">
        </Button>
        
        <Button
            android:id="@+id/btnSubjectThree"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@id/btnSubjectTwoVideo"
            android:text="@string/subject_three"
            android:layout_marginBottom="10dp">
        </Button>

        <Button
            android:id="@+id/btnSubjectThreeVideo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@id/btnSubjectThree"
            android:text="@string/subject_three_video"
			android:layout_marginBottom="10dp">
        </Button>

        <Button
            android:id="@+id/btnParamSettings"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@id/btnSubjectThreeVideo"
            android:text="@string/param_settings"
            android:layout_marginBottom="10dp">
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/main_logo"
            android:src="@drawable/mian_logo" />
    </RelativeLayout>

</LinearLayout>